[package]
name = "colorlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_image_resize = "2.7.3"
log = "^0.4"
log-panics = { version = "2", features = ["with-backtrace"]}
rawsock = "0.3.0"
rayon = "1.8.0"
syslog = "^6"
v4l = "0.14.0"
